--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">FileStorageAccessDemo</string>
+    <string name="txt_pick_file">Pick File</string>
+    <string name="txt_create_file">Create File</string>
+    <string name="hint_file_content">File Content</string>
 </resources>
